source/param_parser.output
Gramática

    0 $accept: File $end

    1 File: '{' PL '}'

    2 PL: PI
    3   | PI ',' PL

    4 PI: ID ':' '{' PAL '}'

    5 PAL: AT
    6    | AT ',' PAL

    7 IDORSTR: STR
    8        | ID

    9 AT: COMMENT ':' IDORSTR
   10   | CLASS ':' IDORSTR
   11   | VALUE_TYPE ':' VT
   12   | XML_NAME ':' IDORSTR
   13   | DEFAULT_VALUE ':' IDORSTR

   14 VT: DOUBLE
   15   | UINT
   16   | SWITCH
   17   | BOOLEAN


Terminais, com as regras aonde aparecem

$end (0) 0
',' (44) 3 6
':' (58) 4 9 10 11 12 13
'{' (123) 1 4
'}' (125) 1 4
error (256)
COMMENT (258) 9
CLASS (259) 10
VALUE_TYPE (260) 11
XML_NAME (261) 12
DEFAULT_VALUE (262) 13
STR (263) 7
ID (264) 4 8
DOUBLE (265) 14
UINT (266) 15
SWITCH (267) 16
BOOLEAN (268) 17


Não-terminais, com as regras aonde aparecem

$accept (18)
    à esquerda: 0
File (19)
    à esquerda: 1, à direita: 0
PL (20)
    à esquerda: 2 3, à direita: 1 3
PI (21)
    à esquerda: 4, à direita: 2 3
PAL (22)
    à esquerda: 5 6, à direita: 4 6
IDORSTR (23)
    à esquerda: 7 8, à direita: 9 10 12 13
AT (24)
    à esquerda: 9 10 11 12 13, à direita: 5 6
VT (25)
    à esquerda: 14 15 16 17, à direita: 11


estado 0

    0 $accept: . File $end

    '{'  fazer shift, e ir para o estado 1

    File  ir para o estado 2


estado 1

    1 File: '{' . PL '}'

    ID  fazer shift, e ir para o estado 3

    PL  ir para o estado 4
    PI  ir para o estado 5


estado 2

    0 $accept: File . $end

    $end  fazer shift, e ir para o estado 6


estado 3

    4 PI: ID . ':' '{' PAL '}'

    ':'  fazer shift, e ir para o estado 7


estado 4

    1 File: '{' PL . '}'

    '}'  fazer shift, e ir para o estado 8


estado 5

    2 PL: PI .
    3   | PI . ',' PL

    ','  fazer shift, e ir para o estado 9

    $default  reduzir usando a regra 2 (PL)


estado 6

    0 $accept: File $end .

    $default  aceite


estado 7

    4 PI: ID ':' . '{' PAL '}'

    '{'  fazer shift, e ir para o estado 10


estado 8

    1 File: '{' PL '}' .

    $default  reduzir usando a regra 1 (File)


estado 9

    3 PL: PI ',' . PL

    ID  fazer shift, e ir para o estado 3

    PL  ir para o estado 11
    PI  ir para o estado 5


estado 10

    4 PI: ID ':' '{' . PAL '}'

    COMMENT        fazer shift, e ir para o estado 12
    CLASS          fazer shift, e ir para o estado 13
    VALUE_TYPE     fazer shift, e ir para o estado 14
    XML_NAME       fazer shift, e ir para o estado 15
    DEFAULT_VALUE  fazer shift, e ir para o estado 16

    PAL  ir para o estado 17
    AT   ir para o estado 18


estado 11

    3 PL: PI ',' PL .

    $default  reduzir usando a regra 3 (PL)


estado 12

    9 AT: COMMENT . ':' IDORSTR

    ':'  fazer shift, e ir para o estado 19


estado 13

   10 AT: CLASS . ':' IDORSTR

    ':'  fazer shift, e ir para o estado 20


estado 14

   11 AT: VALUE_TYPE . ':' VT

    ':'  fazer shift, e ir para o estado 21


estado 15

   12 AT: XML_NAME . ':' IDORSTR

    ':'  fazer shift, e ir para o estado 22


estado 16

   13 AT: DEFAULT_VALUE . ':' IDORSTR

    ':'  fazer shift, e ir para o estado 23


estado 17

    4 PI: ID ':' '{' PAL . '}'

    '}'  fazer shift, e ir para o estado 24


estado 18

    5 PAL: AT .
    6    | AT . ',' PAL

    ','  fazer shift, e ir para o estado 25

    $default  reduzir usando a regra 5 (PAL)


estado 19

    9 AT: COMMENT ':' . IDORSTR

    STR  fazer shift, e ir para o estado 26
    ID   fazer shift, e ir para o estado 27

    IDORSTR  ir para o estado 28


estado 20

   10 AT: CLASS ':' . IDORSTR

    STR  fazer shift, e ir para o estado 26
    ID   fazer shift, e ir para o estado 27

    IDORSTR  ir para o estado 29


estado 21

   11 AT: VALUE_TYPE ':' . VT

    DOUBLE   fazer shift, e ir para o estado 30
    UINT     fazer shift, e ir para o estado 31
    SWITCH   fazer shift, e ir para o estado 32
    BOOLEAN  fazer shift, e ir para o estado 33

    VT  ir para o estado 34


estado 22

   12 AT: XML_NAME ':' . IDORSTR

    STR  fazer shift, e ir para o estado 26
    ID   fazer shift, e ir para o estado 27

    IDORSTR  ir para o estado 35


estado 23

   13 AT: DEFAULT_VALUE ':' . IDORSTR

    STR  fazer shift, e ir para o estado 26
    ID   fazer shift, e ir para o estado 27

    IDORSTR  ir para o estado 36


estado 24

    4 PI: ID ':' '{' PAL '}' .

    $default  reduzir usando a regra 4 (PI)


estado 25

    6 PAL: AT ',' . PAL

    COMMENT        fazer shift, e ir para o estado 12
    CLASS          fazer shift, e ir para o estado 13
    VALUE_TYPE     fazer shift, e ir para o estado 14
    XML_NAME       fazer shift, e ir para o estado 15
    DEFAULT_VALUE  fazer shift, e ir para o estado 16

    PAL  ir para o estado 37
    AT   ir para o estado 18


estado 26

    7 IDORSTR: STR .

    $default  reduzir usando a regra 7 (IDORSTR)


estado 27

    8 IDORSTR: ID .

    $default  reduzir usando a regra 8 (IDORSTR)


estado 28

    9 AT: COMMENT ':' IDORSTR .

    $default  reduzir usando a regra 9 (AT)


estado 29

   10 AT: CLASS ':' IDORSTR .

    $default  reduzir usando a regra 10 (AT)


estado 30

   14 VT: DOUBLE .

    $default  reduzir usando a regra 14 (VT)


estado 31

   15 VT: UINT .

    $default  reduzir usando a regra 15 (VT)


estado 32

   16 VT: SWITCH .

    $default  reduzir usando a regra 16 (VT)


estado 33

   17 VT: BOOLEAN .

    $default  reduzir usando a regra 17 (VT)


estado 34

   11 AT: VALUE_TYPE ':' VT .

    $default  reduzir usando a regra 11 (AT)


estado 35

   12 AT: XML_NAME ':' IDORSTR .

    $default  reduzir usando a regra 12 (AT)


estado 36

   13 AT: DEFAULT_VALUE ':' IDORSTR .

    $default  reduzir usando a regra 13 (AT)


estado 37

    6 PAL: AT ',' PAL .

    $default  reduzir usando a regra 6 (PAL)
